<resources>
    <string name="app_name">SIH App</string>
    <string name="email_hint">Email</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_tv">Login</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="dashboard">Dashboard</string>
    <string name="smart_india_hackathon">Smart India Hackathon</string>
    <string name="pick_up_points">Pick Up Points</string>
    <string name="add_pick_up">Add Pick Up</string>
    <string name="plan_a_trip">Plan a Trip</string>
    <string name="exit">Exit</string>
    <string name="view_map">View Map</string>
    <string name="main_Add">Main Address</string>
    <string name="sub_add">Sub Address</string>
    <string name="add">Add</string>
    <string name="upload_photos">Upload</string>
    <string name="view_photos">View Photo</string>
    <string name="choose">Choose</string>
    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="api_key">AIzaSyAwSm9kasNS6uGmH-dIWmixnywo_LpikOs</string>
</resources>
