<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".AddPickUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:layout_weight="3"
        android:background="@drawable/selector">

        <RelativeLayout
            android:id="@+id/page_title_pick_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/pick_up_iv"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:elevation="8dp"
                android:src="@drawable/car" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pick_up_iv"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/add_pick_up"
                android:textColor="@color/colorTitle"
                android:textSize="28dp"
                android:textStyle="bold" />

        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="7"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <RelativeLayout
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/choose_btn_parent"
                android:layout_width="130dp"
                android:layout_height="45dp"
                android:layout_marginTop="25dp"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="22.5dp"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:id="@+id/choose_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:ellipsize="end"
                        android:lines="1"
                        android:text="@string/choose"
                        android:textColor="@color/colorWhite"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_below="@+id/choose_btn_parent"
                android:id="@+id/upload_btn_parent"
                android:layout_width="130dp"
                android:layout_height="45dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="22.5dp"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:id="@+id/upload_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:ellipsize="end"
                        android:lines="1"
                        android:text="@string/upload_photos"
                        android:textColor="@color/colorWhite"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <ProgressBar
                android:visibility="invisible"
                android:layout_marginTop="25dp"
                android:id="@+id/loading"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/upload_btn_parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </RelativeLayout>






</LinearLayout>