<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:weightSum="10"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@color/colorWhite">

        <RelativeLayout
            android:id="@+id/page_title_main"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/smart_iv"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/smart" />

            <TextView
                android:layout_marginTop="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dashboard"
                android:layout_below="@+id/smart_iv"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorTitle"
                android:textSize="32dp"
                android:textStyle="bold" />


        </RelativeLayout>



    </RelativeLayout>

    <GridLayout
        android:id="@+id/mainGrid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.8"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:paddingTop="14dp"
        android:paddingHorizontal="14dp"
        android:background="@color/colorWhite"
        android:rowCount="2">

        <!--Row1-->
        <!--Column1-->

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="3dp">

            <RelativeLayout
                android:background="@drawable/selector"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_centerInParent="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image_01"
                        android:layout_centerInParent="true"
                        android:src="@drawable/trash"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_below="@+id/image_01"
                        android:text="@string/pick_up_points"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold"
                        android:textColor="@color/colorTitle"
                        android:layout_marginTop="28dp"
                        android:textSize="18dp"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                </RelativeLayout>




            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <!--Column2-->

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="3dp">

            <RelativeLayout
                android:background="@drawable/selector"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_centerInParent="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image_02"
                        android:layout_centerInParent="true"
                        android:src="@drawable/car"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_below="@+id/image_02"
                        android:text="@string/add_pick_up"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold"
                        android:textColor="@color/colorTitle"
                        android:layout_marginTop="28dp"
                        android:textSize="18dp"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                </RelativeLayout>




            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <!--Row2-->
        <!--Column1-->

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="3dp">

            <RelativeLayout
                android:background="@drawable/selector"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_centerInParent="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image_03"
                        android:layout_centerInParent="true"
                        android:src="@drawable/track"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_below="@+id/image_03"
                        android:text="@string/plan_a_trip"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold"
                        android:textColor="@color/colorTitle"
                        android:layout_marginTop="28dp"
                        android:textSize="18dp"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                </RelativeLayout>




            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <!--Column2-->

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="3dp">

            <RelativeLayout
                android:background="@drawable/selector"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_centerInParent="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image_04"
                        android:layout_centerInParent="true"
                        android:src="@drawable/exit"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_below="@+id/image_04"
                        android:text="@string/exit"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold"
                        android:textColor="@color/colorTitle"
                        android:layout_marginTop="28dp"
                        android:textSize="18dp"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                </RelativeLayout>




            </RelativeLayout>

        </androidx.cardview.widget.CardView>


    </GridLayout>

    <LinearLayout
        android:padding="8dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="4dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:text="A project by- "
            android:layout_gravity="center_horizontal"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/colorTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="Just Another Team"
            android:layout_gravity="center_horizontal"
            android:textSize="24dp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>




</LinearLayout>