<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginTop="12dp"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardElevation="4dp"
    app:cardCornerRadius="12dp">

    <LinearLayout
        android:paddingTop="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--
        <LinearLayout
            android:paddingHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rating"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/rating_circle"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                tools:text="8.9" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/main_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-medium"
                    android:maxLines="2"
                    android:textAllCaps="true"
                    android:textColor="@color/textColorEarthquakeLocation"
                    android:textSize="12sp"
                    tools:text="Vishwakarma Institute of Technology" />

                <TextView
                    android:id="@+id/sub_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:textColor="@color/textColorEarthquakeDetails"
                    android:textSize="16sp"
                    tools:text="Long placeholder location that should wrap to more than 2 lines of text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textColor="@color/textColorEarthquakeDetails"
                    android:textSize="12sp"
                    tools:text="Mar 6, 2010" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textColor="@color/textColorEarthquakeDetails"
                    android:textSize="12sp"
                    tools:text="3:00 PM" />

            </LinearLayout>


        </LinearLayout>
        -->

        <TextView
            android:layout_marginLeft="16dp"
            android:textColor="@color/colorTitle"
            android:textStyle="bold"
            android:text="@string/latitude"
            android:id="@+id/latitude"
            android:textSize="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginLeft="16dp"
            android:textColor="@color/colorTitle"
            android:textStyle="bold"
            android:text="@string/longitude"
            android:id="@+id/longitude"
            android:textSize="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <androidx.cardview.widget.CardView
                    android:id="@+id/view_photos_card"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_centerInParent="true"
                    android:foregroundGravity="center"
                    app:cardBackgroundColor="@color/colorAccent"
                    app:cardCornerRadius="22.5dp"
                    app:cardElevation="0dp">

                    <RelativeLayout
                        android:id="@+id/view_photos"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">


                        <TextView
                            android:id="@+id/view_photos_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:ellipsize="end"
                            android:lines="1"
                            android:text="@string/view_photos"
                            android:textColor="@color/colorWhite"
                            android:textSize="14dp"
                            android:textStyle="bold" />


                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <androidx.cardview.widget.CardView
                    android:id="@+id/view_map_card"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_centerInParent="true"
                    android:foregroundGravity="center"
                    app:cardBackgroundColor="@color/colorAccent"
                    app:cardCornerRadius="22.5dp"
                    app:cardElevation="0dp">

                    <RelativeLayout
                        android:id="@+id/view_map"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="false"
                        android:focusable="false">

                        <TextView
                            android:id="@+id/view_map_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:ellipsize="end"
                            android:lines="1"
                            android:text="@string/view_map"
                            android:textColor="@color/colorWhite"
                            android:textSize="14dp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

            </RelativeLayout>


        </LinearLayout>

    </LinearLayout>




</androidx.cardview.widget.CardView>